# project/flask/swagger/time_association_api.yaml
@@ -7,31 +7,127 @@ info:
     name: "Jacob Erickson, Yejee (Jenny) Lee, and Clara Mae Wells"
 
 paths:
-  # /describe/category-count/:
-  #   get:
-  #     summary: Number of trending videos in each category (only categories with counts above 0)
-  #     operationId: time_association_api.get_cat_count
-  #     consumes:
-  #       - multipart/form-data
-  #     produces:
-  #       - application/json
-  #     parameters:
-  #       in: query
-  #       name: country
-  #       required: true
-  #       type: string
-  #       description: The country to show category counts for - United States, Candada, or Great Britain
-  #       enum: 
-  #         - us
-  #         - ca
-  #         - gb
-  #     responses:
-  #       '200': 
-  #         description: Category counts successfully retrieved
-  #       '500': 
-  #         description: Unable to get category counts
+  /describe/category/count:
+    get:
+      summary: Number of trending videos in each category
+      operationId: time_association_api.get_cat_count
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: country
+          required: true
+          type: string
+          description: The country to show category counts for - United States, Candada, or Great Britain (only diplays categories with counts above 0)
+          enum: 
+            - us
+            - ca
+            - gb
+      responses:
+        '200': 
+          description: Category counts successfully retrieved
+        '500': 
+          description: Unable to get category counts
 
-  /describe/title-sets/1:
+  /describe/engagement/like-dislike:
+    get:
+      summary: All videos like/dislike engagment
+      operationId: time_association_api.get_ld_engagement
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: country
+          required: true
+          type: string
+          description: Overall all like/dislike engagement (% based on views) for all videos in specified country
+          enum: 
+            - us
+            - ca
+            - gb
+      responses:
+        '200': 
+          description: Like/dislike engagement successfully retrieved
+        '500': 
+          description: Unable to get like/dislike engagement
+
+  /describe/engagement/comment:
+    get:
+      summary: All videos comment engagment
+      operationId: time_association_api.get_comm_engagement
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: country
+          required: true
+          type: string
+          description: The country to show category like/dislike engagement for - United States, Candada, or Great Britain (engagemment is like/dislike % based on views)
+          enum: 
+            - us
+            - ca
+            - gb
+      responses:
+        '200': 
+          description: Like/dislike engagement successfully retrieved
+        '500': 
+          description: Unable to get like/dislike engagement
+
+  /describe/engagement/category/like-dislike:
+    get:
+      summary: Like/dislike engagment
+      operationId: time_association_api.get_cat_ld_engagement
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: country
+          required: true
+          type: string
+          description: The country to show category like/dislike engagement for - United States, Candada, or Great Britain (engagemment is like/dislike % based on views)
+          enum: 
+            - us
+            - ca
+            - gb
+      responses:
+        '200': 
+          description: Country category like/dislike engagement successfully retrieved
+        '500': 
+          description: Unable to get country category like/dislike engagement
+
+  /describe/engagement/category/comment:
+    get:
+      summary: Comment engagment
+      operationId: time_association_api.get_cat_comm_engagement
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: country
+          required: true
+          type: string
+          description: The country to show category comment engagment for United States, Candada, or Great Britain (engagement is comment % based on views)
+          enum: 
+            - us
+            - ca
+            - gb
+      responses:
+        '200': 
+          description: Country category comment engagement successfully retrieved
+        '500': 
+          description: Unable to get country category comment engagement
+
+  /describe/sets/title/1:
     get:
       summary: US trending category titles frequent one-itemsets
       description: Returns frequent one-itemsets (words that appear a minimum amount of times) in trending US category titles
@@ -42,7 +138,7 @@ paths:
         '500': 
           description: Unable to get frequent itemsets
 
-  /describe/title-sets/2:
+  /describe/sets/title/2:
     get:
       summary: US trending category titles frequent two-itemsets
       description: Returns frequent two itemsets (two words that appear together a minimum amount of times) in trending US category titles
@@ -53,7 +149,7 @@ paths:
         '500': 
           description: Unable to get frequent itemsets
 
-  /describe/title-sets/3:
+  /describe/sets/title/3:
     get:
       summary: US trending category titles frequent three-itemsets
       description: Returns frequent three itemsets (three words that appear together a minimum amount of times) in trending US category titles
@@ -64,7 +160,7 @@ paths:
         '500': 
           description: Unable to get frequent itemsets
 
-  /describe/rules:
+  /describe/rules/title:
     get:
       summary: US trending category titles association rules
       description: Returns association rules (words with a relationship) in trending US category titles
